--- a/src/css/components/_header.sass
+++ b/src/css/components/_header.sass
@@ -29,7 +29,7 @@
                 @apply w-full h-full text-center object-cover object-center
     
     ._lazy-avatar-content
-        @apply absolute z-10 mt-2 w-52 right-0 rounded-md bg-white dark:bg-gray-800 dark:text-white bg-gradient shadow-lg transition-all duration-300 ease-in-out hidden
+        @apply absolute z-10 mt-2 w-48 right-0 rounded-md bg-white dark:bg-gray-800 dark:text-white bg-gradient shadow-lg transition-all duration-300 ease-in-out hidden
 
         &.is-active
             @apply block
@@ -38,3 +38,24 @@
             @apply content-[''] w-[14px] h-[14px] absolute border-l-[3.5px] border-b-[3.5px] bg-white dark:bg-gray-800 border-white/80 dark:border-gray-800/80 right-3 top-[-6.6px]
             clip-path: polygon(0% 0%, 100% 100%, 0% 100%)
             transform: rotate(135deg)
+        
+        ._lazy-avatar-header
+            @apply px-[18px] py-3.5 text-sm
+
+            ._lazy-avatar-name
+                @apply font-semibold text-gray-800 dark:text-white mb-0.5
+
+            ._lazy-avatar-username
+                @apply font-normal text-gray-600 dark:text-gray-400
+
+        ._lazy-list-group
+            @apply p-1.5 text-sm text-gray-800 dark:text-white
+
+            ._lazy-list
+                @apply block px-3 py-2 hover:bg-gray-500/[.08] rounded-lg
+
+            ._lazy-list-logout
+                @apply block px-3 py-2 hover:bg-gray-500/[.08] text-red-500 rounded-lg font-bold
+    
+        ._lazy-border
+            @apply border-dashed border-gray-500/20
